--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -19,9 +19,13 @@
 #   text: button text
 #   cmd: Either:
 #     a text string to be sent to k4, or
-#     a python 'list' object containg server name/cmd pairs (python dict objects)
+#     a python 'list' object containing server name/cmd pairs (python dict objects)
 #     to be sent, i.e. [ k4: k4cmd, s1: s1cmd ] would send 'k4cmd' to server k4, and
-#     then send 's1cmd' to server s1.
+#     then send 's1cmd' to server s1. To wait between sending commands to two
+#     servers, insert a pseudo server name of 'delay' with a value specifying
+#     the number of milliseconds to delay. e.g. to delay a half second between
+#     sending the commands to k4 and s1 in the above example, use a cmd of
+#     [ k4: k4cmd, delay: 500, s1: s1cmd ].
 #   directive:
 #     'quit', terminates the program
 #     'show_previous_page', displays the previously-displayed page
@@ -120,6 +124,6 @@
         - { item: button, text:    K4D OFF, cmd:  PS0;,  bg:   red1, abg:     green }
 
         #- { item: button, text:       Exit, directive:  quit,  bg:  white, abg:       red }
-        #- { item: button, text: send cmd to 3 servers, cmd: [ k4: PC050L;, s1: s1cmd, k4: PS0;, s2: s2cmd],  bg: red1, abg: green }
+        #- { item: button, text: send cmd to 3 servers, cmd: [ k4: PS0;, delay: 100, s1: s1cmd, delay: 10000, s2: s2cmd ], bg: red1, abg: green }
 
 # vim: set expandtab ts=2 sw=2:
