--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -66,6 +66,18 @@
   columns: 2
   contains:
     - item: group
+      contains:
+      - item: group
+        label: VFO A
+        contains:
+          - { item: vfo, AorB: A, bg: white, fg: black }
+
+      - item: group
+        label: VFO B
+        contains:
+          - { item: vfo, AorB: B, bg: white, fg: black }
+
+    - item: group
       label: Mode
       column: 0
       contains:
