Implement a slider widget
An example using it to set/get the K4 power output has been added to
example_config_files/k4macro.yaml

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -38,6 +38,21 @@
 #   bg: background color
 #   abg: active background color
 
+# slider options:
+#   from: The lowest value of the slider
+#   to: The highest value of he slider
+#   orient: Either:
+#     vertical: Specifies a vertical slider
+#     horizontal: Specifies a horizontal slider
+#   length: The length of the slider in pixels
+#   width: The width in pixels if the slider is verical, otherwise the height
+#   increment: A python expression to set the slider increment given the variable value
+#   cmd: A python expression to produce the K4 command given the variable 'value'.
+#   response: A python expression to extract the slider value from the K4 response.
+#   font: The font used for the slider's text.
+#   fg: foreground color
+#   bg: background color
+
 - item: defaults
   # Colors
   bg: maroon1
@@ -174,6 +189,18 @@
             - { item: radiobutton, groupid: bandwidth, indicator: 0, text:   2.3 kHz, cmd: BW0230;, abg: yellow, bg: '#98F5FF' }
             - { item: radiobutton, groupid: bandwidth, indicator: 0, text:   3.5 kHz, cmd: BW0350;, abg: yellow, bg: '#98F5FF' }
             - { item: radiobutton, groupid: bandwidth, indicator: 0, text:   4.0 kHz, cmd: BW0400;, abg: yellow, bg: '#98F5FF' }
+
+    - item: group
+      label: Power (Watts)
+      column: 0
+      contains:
+      - item: slider
+        from: 0.0
+        to: 110.0
+        length: 200
+        increment: ".0001 if value > 0.0 and value <= .01 else .1 if value <= 10.0 else 1.0"
+        cmd: "'PC{:03d}L;'.format(int(float(value)*10)) if float(value) <= 10.0 else 'PC{:03d}H;'.format(int(value))"
+        response: "float(value[2:-2])/10 if value[-2] == 'L' else float(value[2:-2])/10000 if value[-2] == 'X' else float(value[2:-2])"
 
     - item: group
       label: Power
