--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -200,7 +200,7 @@
         length: 200
         increment: ".0001 if value > 0.0 and value <= .01 else .1 if value <= 10.0 else 1.0"
         cmd: "'PC{:03d}L;'.format(int(float(value)*10)) if float(value) <= 10.0 else 'PC{:03d}H;'.format(int(value))"
-        response: "float(value[2:-2])/10 if value[-2] == 'L' else float(value[2:-2])/10000 if value[-2] == 'X' else float(value[2:-2])"
+        response: "float(value[2:5])/10 if value[5] == 'L' else float(value[2:5])/10000 if value[5] == 'X' else float(value[2:5])"
 
     - item: group
       label: Power
